add decorative form elements

--- a/source/index.html
+++ b/source/index.html
@@ -250,22 +250,22 @@
           <legend class="form__legend">Наличие молока</legend>
           <p class="form__group">
             <label class="form__radio-label" for="no-matter">Неважно</label>
-            <input class="visually-hidden" type="radio" name="milk" value="no-matter" id="no-matter" checked>
+            <input class="form__radio-input visually-hidden" type="radio" name="milk" value="no-matter" id="no-matter" checked>
             <span class="form__radio-mark"></span>
           </p>
           <p class="form__group">
             <label class="form__radio-label" for="animals-milk">Только животное</label>
-            <input class="visually-hidden" type="radio" name="milk" value="animals-milk" id="animals-milk">
+            <input class="form__radio-input visually-hidden" type="radio" name="milk" value="animals-milk" id="animals-milk">
             <span class="form__radio-mark"></span>
           </p>
           <p class="form__group">
             <label class="form__radio-label" for="vegetable-milk">Только растительное</label>
-            <input class="visually-hidden" type="radio" name="milk" value="vegetable-milk" id="vegetable-milk">
+            <input class="form__radio-input visually-hidden" type="radio" name="milk" value="vegetable-milk" id="vegetable-milk">
             <span class="form__radio-mark"></span>
           </p>
           <p class="form__group">
-            <label class="form__radio-label" for="no-milk">Без молока</label>
-            <input class="visually-hidden" type="radio" name="milk" value="no-milk" id="no-milk" disabled>
+            <label class="form__radio-label form__radio-label--disabled" for="no-milk">Без молока</label>
+            <input class="form__radio-input visually-hidden" type="radio" name="milk" value="no-milk" id="no-milk" disabled>
             <span class="form__radio-mark"></span>
           </p>
         </fieldset>
@@ -276,29 +276,29 @@
           <legend class="form__legend">Страна произрастания</legend>
           <p class="form__group">
             <label class="form__checkbox-label" for="brasil-coffee">Бразилия</label>
-            <input class="visually-hidden" type="checkbox" name="coffee-country" value="brasil" id="brasil-coffee"
+            <input class="form__checkbox-input visually-hidden" type="checkbox" name="coffee-country" value="brasil" id="brasil-coffee"
               checked>
             <span class="form__checkbox-mark"></span>
           </p>
           <p class="form__group">
             <label class="form__checkbox-label" for="ethiopia-coffee">Эфиопия</label>
-            <input class="visually-hidden" type="checkbox" name="coffee-country" value="ethiopia" id="ethiopia-coffee">
+            <input class="form__checkbox-input visually-hidden" type="checkbox" name="coffee-country" value="ethiopia" id="ethiopia-coffee">
             <span class="form__checkbox-mark"></span>
           </p>
           <p class="form__group">
             <label class="form__checkbox-label" for="colombia-coffee">Колумбия</label>
-            <input class="visually-hidden" type="checkbox" name="coffee-country" value="colombia" id="colombia-coffee">
+            <input class="form__checkbox-input visually-hidden" type="checkbox" name="coffee-country" value="colombia" id="colombia-coffee">
             <span class="form__checkbox-mark"></span>
           </p>
           <p class="form__group">
             <label class="form__checkbox-label" for="costa-rica-coffee">Коста-Рика</label>
-            <input class="visually-hidden" type="checkbox" name="coffee-country" value="costa-rica"
+            <input class="form__checkbox-input visually-hidden" type="checkbox" name="coffee-country" value="costa-rica"
               id="costa-rica-coffee">
             <span class="form__checkbox-mark"></span>
           </p>
           <p class="form__group">
-            <label class="form__checkbox-label" for="peru-coffee">Перу</label>
-            <input class="visually-hidden" type="checkbox" name="coffee-country" value="peru" id="peru-coffee" disabled>
+            <label class="form__checkbox-label form__checkbox-label--disabled" for="peru-coffee">Перу</label>
+            <input class="form__checkbox-input visually-hidden" type="checkbox" name="coffee-country" value="peru" id="peru-coffee" disabled>
             <span class="form__checkbox-mark"></span>
           </p>
         </fieldset>
