add decorative footer element

--- a/source/index.html
+++ b/source/index.html
@@ -416,7 +416,7 @@
             <a class="pagination__pages-link link" href="#">3</a>
           </li>
         </ul>
-        <a class="pagination__link agination__link--next link" href="#">
+        <a class="pagination__link pagination__link--next link" href="#">
           <span class="pagination__link-text">Вперёд</span>
         </a>
       </div>
@@ -522,7 +522,7 @@
         </li>
       </ul>
     </div>
-    <a class="footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">Разработано в <span class="footer__copyright-link">HTML Academy</span>
+    <a class="footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">Разработано в HTML Academy
       <svg aria-hidden="true" focusable="false" width="16" height="16"
       xmlns="http://www.w3.org/2000/svg">
       <use href="./img/icons/stack.svg#html-academy" />
