finished js on the header mebu button

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
       </picture>
     </a>
     <span class="header__description">Интернет-магазин кофейных напитков</span>
-    <nav class="header__navigation header__navigation--nojs navigation">
+    <nav class="header__navigation navigation navigation--nojs">
       <ul class="navigation__user-list">
         <li class="navigation__user-item">
           <a class="navigation__user-link link" href="#">
